# fastapi-docker-traefik

./: Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  readme.md  traefik.prod.toml
app/: config.py  db.py  main.py
traefik-public-certificates/: acme.json
