[tool.poetry]
name = "fast-api-docker-traefik"
version = "0.1.0"
description = ""
authors = ["Tobiloba Ogundiyan <114788338+6ogunt48@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.89.1"
uvicorn = "0.20.0"
asyncpg = "0.27.0"
ormar = "0.12.1"
psycopg2-binary = "2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
